test/tests/compiler/from_to/from_unknown_scheme.txt
error: unsupported scheme `unknown`
 --> tests/compiler/from_to/from_unknown_scheme.tql:5:7
  |
5 | from "unknown://example.org"
  |       ^^^^^^^ 
  |
  = note: supported schemes for deduction: `amqp`, `amqps`, `elasticsearch`, `file`, `fluent-bit`, `ftp`, `ftps`, `http`, `https`, `inproc`, `kafka`, `opensearch`, `s3`, `sqs`, `tcp`, `udp`, `zmq`
  = docs: https://docs.tenzir.com/reference/operators/from
